# Your-Favourit-To-Do-List

./: AddTaskWindow.cpp  AddTaskWindow.h  CMakeLists.txt  EditTask.cpp  EditTask.h  FileHandler.cpp  FileHandler.h  Libs.h  MainGUI.cpp  MainGUI.h  README.md  StringHandle.cpp  StringHandle.h  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  main.cpp  wxHeaders.h
